apollo-router/tests/snapshots/type_conditions_test__type_conditions_disabled.snap
---
source: apollo-router/tests/type_conditions_test.rs
expression: response
---
{
  "data": {
    "search": [
      {
        "id": "a7052397-b605-414a-aba4-408d51c8eef0",
        "sections": [
          {
            "artwork": "Hello World"
          },
          {
            "artwork": "Hello World"
          }
        ]
      },
      {
        "id": "3a7b08c9-d8c0-4c55-b55d-596a272392e0",
        "sections": [
          {
            "artwork": null
          },
          {
            "artwork": null
          }
        ]
      }
    ]
  }
}
